# NextGenGameEngine

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  LICENSE  MASTERPLAN.md  README.md  _reconfigure.bat  brief2.txt  brief_test.txt  build_errors.txt  build_temp.bat  editor_layout.ini  final_test.txt  fix_tests.py  frolicking-tumbling-pond.md  full_run.txt  full_run3.txt  full_run4.txt  full_run5.txt  full_run6.txt  full_run7.txt  full_run8.txt  full_test.txt  full_test2.txt  minmax.txt  small_full.txt  small_stdout.txt  stdout.txt  test_out.txt  test_output.txt  test_output2.txt  test_stdout.txt  vcpkg.json
editor/: CMakeLists.txt  editor_app.cpp  editor_app.h  main.cpp
editor/panels/: viewport_panel.cpp  viewport_panel.h
engine/: CMakeLists.txt
engine/ai/: behavior_tree.cpp  behavior_tree.h
engine/animation/: animation_system.cpp  animation_system.h
engine/app/: application.cpp  application.h
engine/assets/: async_loader.cpp  async_loader.h  cgltf_impl.cpp  gltf_importer.cpp  gltf_importer.h  resource_manager.cpp  resource_manager.h  shader_file_watcher.cpp  shader_file_watcher.h  shader_include_resolver.cpp  shader_include_resolver.h  shader_permutations.cpp  shader_permutations.h  shader_reflection.cpp  shader_reflection.h  shader_variant_cache.cpp  shader_variant_cache.h  shader_warmup.cpp  shader_warmup.h  stb_impl.cpp
engine/assets/mesh/: mesh_data.h  mesh_loader.cpp  mesh_loader.h
engine/assets/shader/: shader_compiler.cpp  shader_compiler.h
engine/assets/texture/: texture_loader.cpp  texture_loader.h
engine/audio/: audio_system.cpp  audio_system.h
engine/core/: assert.h  hash.h  types.h  uuid.h
engine/core/app/: application.cpp  application.h
engine/core/containers/: array.h  hash_map.h  optional.h  ring_buffer.h  span.h
engine/core/ecs/: archetype.h  component.h  entity.h  world.h
engine/core/events/: event_system.cpp  event_system.h
engine/core/input/: input_action_map.cpp  input_action_map.h
engine/core/jobs/: job_system.cpp  job_system.h
engine/core/logging/: log.cpp  log.h
engine/core/math/: math_types.h  pga.cpp  pga.h
engine/core/memory/: allocator.h  frame_allocator.cpp  frame_allocator.h  linear_allocator.h  pool_allocator.h  stack_allocator.h  tlsf_allocator.h  virtual_memory.h
engine/core/platform/: clock.h  input.cpp  input.h  window.h  window_win32.cpp
engine/core/profiling/: profiler.h
engine/network/client/: net_client.cpp  net_client.h
engine/network/core/: net_socket.cpp  net_socket.h  network_types.h
engine/network/server/: net_server.cpp  net_server.h
engine/physics/: character_controller.cpp  character_controller.h  physics_world.cpp  physics_world.h
engine/renderer/: scene_renderer.cpp  scene_renderer.h
engine/renderer/debug/: debug_renderer.cpp  debug_renderer.h  debug_text.cpp  debug_text.h  debug_visualization.cpp  debug_visualization.h  gpu_timer.cpp  gpu_timer.h  profiler_overlay.cpp  profiler_overlay.h  render_stats.cpp  render_stats.h
engine/renderer/geometry/: virtual_geometry.cpp  virtual_geometry.h
engine/renderer/graph/: frame_graph_compiler.cpp  frame_graph_compiler.h  graph_visualizer.cpp  graph_visualizer.h  pass_profiler.cpp  pass_profiler.h  render_graph.cpp  render_graph.h  render_graph_resource.cpp  render_graph_resource.h  resource_pool.cpp  resource_pool.h  work_graph_scheduler.cpp  work_graph_scheduler.h
engine/renderer/lighting/: gi_probes.cpp  gi_probes.h  light_culling.cpp  light_culling.h  light_types.cpp  light_types.h
engine/renderer/materials/: material.cpp  material.h  material_system.cpp  material_system.h
engine/renderer/particles/: particle_system.cpp  particle_system.h
engine/renderer/pipeline/: draw_call_merger.h  gpu_culling_pipeline.cpp  gpu_culling_pipeline.h  gpu_scene_buffer.cpp  gpu_scene_buffer.h  indirect_cull_pipeline.cpp  indirect_cull_pipeline.h  instance_manager.cpp  instance_manager.h  (+12 more)
engine/scene/: mesh_renderer.h
engine/scripting/: script_engine.cpp  script_engine.h
samples/: CMakeLists.txt
samples/triangle/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  smoke_core_test.cpp  test_main.cpp
tests/core/: test_containers.cpp  test_ecs.cpp  test_events.cpp  test_hash.cpp  test_jobs.cpp  test_memory.cpp  test_pga.cpp  test_types.cpp
tests/fixtures/: triangle.gltf
tests/integration/: test_ai.cpp  test_animation.cpp  test_bindless_table.cpp  test_character_controller.cpp  test_draw_call_merger.cpp  test_events.cpp  test_frame_graph_compiler.cpp  test_instance_manager.cpp  test_light_culling.cpp  test_material_system.cpp  test_network.cpp  test_physics.cpp  test_pipeline_cache_hotreload.cpp  test_prefab.cpp  test_render_graph.cpp  test_scene_serializer.cpp  test_shader_permutations.cpp  test_shader_reflection_pso.cpp  test_terrain.cpp
tests/smoke/: test_editor_lifecycle.cpp
tests/unit/: test_accel_struct_compaction.cpp  test_aliasing_optimizer.cpp  test_aliasing_validator.cpp  test_async_readback.cpp  test_attachment_format_resolver.cpp  test_barrier_deduplicator.cpp  test_buffer_suballocator.cpp  test_cmd_buf_state_cache.cpp  test_cmd_buffer_validator.cpp  test_cmdbuf_recycler_usage.cpp  test_cmdbuf_state_validator.cpp  test_desc_set_layout_optimizer.cpp  test_desc_set_version_tracker.cpp  test_desclayout_pipestats.cpp  test_descriptor_pool_allocator.cpp  test_descriptor_pool_analyzer.cpp  test_descriptor_pool_bindless.cpp  test_descriptor_update_batcher.cpp  test_draw_call_compactor.cpp  test_draw_indirect_validator.cpp  test_dynamic_buffer_indirect.cpp  test_dynamic_state_tracker.cpp  test_format_neg_occlusion.cpp  test_format_utils.cpp  test_frame_allocator.cpp  test_frame_graph_aliaser.cpp  test_frame_resource_gc.cpp  test_frame_resource_tracker.cpp  test_gltf_importer.cpp  test_gpu_memory_heap.cpp  test_heap_inspector_query.cpp  test_indirect_arg_builder.cpp  test_indirect_dispatch.cpp  test_indirect_draw_count.cpp  test_mesh_lod_selector.cpp  test_mipbias_drawmerger.cpp  test_mipmap_gen.cpp  test_mipmap_scheduler.cpp  test_occlusion_query_batch.cpp  test_pass_dependency_analyzer.cpp  (+30 more)
(+409 files in other folders)
